# vw

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: agent.md  api.md  architecture.md  features.md  overview.md  setup.md  testing.md  todo.md
.github/workflows/: pull-request.yml
.plans/002-postgres-phase4-joins/: plan.md  research.md  todo.md
.plans/003-postgres-phase5-advanced-queries/: plan-5a.md  plan-5b.md  plan-5c.md  plan-5d.md  research-5b.md  research-5c.md  research-5d.md  research.md  todo-5a.md  todo-5b.md  todo-5c.md  todo-5d.md
.plans/004-phase7-string-functions/: research.md
.plans/007-datetime-functions/: plan.md  research.md  todo.md
.plans/008-type-casting/: plan.md  research.md  todo.md
docs/: architecture.md  getting-started.md  index.md  installation.md  quickstart.md
docs/api/: core.md  duckdb.md  index.md  postgres.md
docs/development/: clickhouse-parity.md  duckdb-parity.md  mysql-parity.md  oracle-parity.md  postgres-parity.md  snowflake-parity.md  sqlite-parity.md  sqlserver-parity.md
tests/: __init__.py  conftest.py  test_base.py  test_build.py  test_column.py  test_datetime.py  test_ddl.py  test_dml.py  test_expr.py  test_grouping.py  test_joins.py  test_operators.py  test_parameter.py  test_query.py  test_sql.py  test_star.py  test_strings.py  test_text.py  test_values.py  utils.py
tests/core/: __init__.py  test_base.py  test_case.py  test_column.py  test_datetime.py  test_frame.py  test_functions.py  test_joins.py  test_raw.py  test_render.py  test_source.py  (+5 more)
vw/: __init__.py  base.py  build.py  cli.py  column.py  datetime.py  ddl.py  dml.py  dtypes.py  exceptions.py  expr.py  frame.py  functions.py  grouping.py  joins.py  operators.py  parameter.py  query.py  render.py  star.py  strings.py  text.py  values.py
(+149 files in other folders)
