[project]
name = "vw"
version = "0.0.1"
description = "A Python library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "strenum",
    "typing_extensions",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-describe",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by line-length)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
